<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">Quran</string>
  <string name="downloadPrompt_title">Download Required Files?</string>
  <string name="downloadPrompt">In order for Quran Android to work properly,
        we need to download some files. If you do not do this now, the app
        may not work reliably and will require an Internet connection for reading.
        Would you like to download the required files now?
    </string>
  <string name="downloadTabletPrompt">We recently added improved images for
        tablets. Would you like to download these images now?</string>
  <string name="downloadImportantPrompt">There is a small yet important update
        for the Quran images you have on your device. Would you like to download this
        patch now?
    </string>
  <string name="bannerads">ca-app-pub-2740693036645282/6771665456</string>
  <string name="downloadPrompt_ok">Yes</string>
  <string name="downloadPrompt_no">No</string>
  <string name="downloading_title">Downloading&#8230;</string>
  <string name="downloading_message">Please wait for the files to download (resume supported).</string>
  <string name="extracting_title">Processing&#8230;</string>
  <string name="menu_about">About Us</string>
  <string name="menu_other_apps">Other apps</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_jump_last_page">Last page</string>
  <string name="menu_bookmarks">Bookmarks</string>
  <string name="menu_bookmarks_page">Page Bookmarks</string>
  <string name="menu_bookmarks_ayah">Ayah Bookmarks</string>
  <string name="menu_sort">Sort</string>
  <string name="menu_sort_date">Date Added</string>
  <string name="menu_sort_location">Location in Quran</string>
  <string name="menu_sort_group_by_tags">Group by Tags</string>
  <string name="menu_show_recents" translatable="false">@string/recent_pages</string>
  <string name="menu_translation">Show Translation</string>
  <string name="menu_back_to_page">Show Quran</string>
  <string name="menu_help">Help</string>
  <string name="menu_search">Search</string>
  <string name="menu_get_translations">Get Translations</string>
  <string name="menu_jump">Jump</string>
  <string name="gotoPage">Go to page</string>
  <string name="cancel">Cancel</string>
  <string name="about_description">Quran for Android is a free Quran application. Please do not forget the contributors in your prayers.</string>
  <string name="about_data_sources">Data Sources</string>
  <string name="about_images">Images</string>
  <string name="about_madani_images">The Quran images are based on the fonts from the King Fahd Quran Printing Complex</string>
  <string name="about_madani_images_url" translatable="false">https://github.com/quran/quran.com-images</string>
  <string name="about_naskh_images">The Quran images for the Naskh app were taken (with permission) from SHL Info Systems</string>
  <string name="about_naskh_images_url" translatable="false">http://www.shlinfosystems.com</string>
  <string name="about_qaloon_images">Qaloon images used with permission of Nous Memes Editions Et Diffusion (Tunisia)</string>
  <string name="about_quranicaudio" translatable="false">QuranicAudio</string>
  <string name="about_quranicaudio_summary">Gapless mp3 Quran recitations</string>
  <string name="about_quranicaudio_url" translatable="false">http://quranicaudio.com</string>
  <string name="about_quran_ksu">Electronic Moshaf Project</string>
  <string name="about_quran_ksu_summary">The King Saud University Electronic Moshaf Project was the app\'s source of Arabic Tafaseer and translations for various languages</string>
  <string name="about_quran_ksu_url" translatable="false">http://quran.ksu.edu.sa</string>
  <string name="about_tanzil" translatable="false">Tanzil</string>
  <string name="about_tanzil_summary">Translations for many languages</string>
  <string name="about_tanzil_url" translatable="false">http://tanzil.net</string>
  <string name="about_noorhidayat" translatable="false">Noorhidayat</string>
  <string name="about_noorhidayat_summary">Noorehira font and Mufti Taqi Translation</string>
  <string name="about_noorhidayat_url" translatable="false">http://www.noorehidayat.org</string>
  <string name="about_open_source">Open Source Projects</string>
  <string name="about_dagger2" translatable="false">Dagger 2</string>
  <string name="about_dagger2_url" translatable="false">http://google.github.io/dagger</string>
  <string name="about_okhttp" translatable="false">OkHttp</string>
  <string name="about_okhttp_url" translatable="false">https://github.com/square/okhttp</string>
  <string name="about_rxjava" translatable="false">RxJava</string>
  <string name="about_rxjava_url" translatable="false">https://github.com/ReactiveX/RxJava</string>
  <string name="about_rxandroid" translatable="false">RxAndroid</string>
  <string name="about_rxandroid_url" translatable="false">https://github.com/ReactiveX/RxAndroid</string>
  <string name="about_moshi" translatable="false">Moshi</string>
  <string name="about_moshi_url" translatable="false">https://github.com/square/moshi</string>
  <string name="about_sliding_panel" translatable="false">AndroidSlidingUpPanel</string>
  <string name="about_sliding_panel_url" translatable="false">https://github.com/umano/AndroidSlidingUpPanel</string>
  <string name="about_retrolambda" translatable="false">Retrolambda</string>
  <string name="about_retrolambda_desc" translatable="false">orfjackal/retrolambda and evant/gradle-retrolambda</string>
  <string name="about_retrolambda_url" translatable="false">https://github.com/orfjackal/retrolambda</string>
  <string name="about_butterknife" translatable="false">ButterKnife</string>
  <string name="about_butterknife_desc" translatable="false">https://github.com/JakeWharton/butterknife</string>
  <string name="about_butterknife_url" translatable="false">https://github.com/JakeWharton/butterknife</string>
  <string name="about_others">Others</string>
  <string name="about_contributors">Contributors</string>
  <string name="about_contributors_summary">A list of people who contributed to the development of Quran for Android</string>
  <string name="about_contributors_url" translatable="false">https://github.com/quran/quran_android/blob/master/CONTRIBUTORS.md</string>
  <string name="help_title">Frequently Asked Questions</string>
  <string name="help">
        &lt;b>How do I play audio?&lt;/b>
        &lt;br/>Open any Quran page. Tap on the screen once. At the bottom, you will notice
        a play button and some text with the name of a qari. Click the name of the qari to
        choose a different qari. Click play to download and play the current page or sura.
        &lt;br/>
        &lt;br/>&lt;b>How do I view translation?&lt;/b>
        &lt;br/>Open any Quran page. Tap on the screen once. In the top, you will notice a
        globe icon (or, if you don\'t see it, click an icon with three square dots) - click
        this and choose translation to view the translation.
        &lt;br/>
        If you do not have any translations downloaded, it will take
        you to a screen where you can download translations. Choose and download a translation,
        then return back and tap the globe icon again to view the translation.
        &lt;br/>
        &lt;br/>&lt;b>How do I bookmark a page?&lt;/b>
        &lt;br/>Open any Quran page. Tap on the screen once. In the top right, you will see a
        bookmark icon. Tap the bookmark icon to bookmark the page (the color will turn solid white). Tap the bookmark icon
        again to remove the bookmark.
        &lt;br/>
        &lt;br/>&lt;b>How do I make the text larger?&lt;/b>
        &lt;br/>For the Arabic pages, hold your phone in landscape. This makes the text larger.
        For translations, go to settings and set translation text size.
        &lt;br/>
        &lt;br/>&lt;b>How do I share an ayah?&lt;/b>
        &lt;br/>While on any Arabic page, press and hold on any ayah to get a menu where you can
        choose to bookmark, tag, share or copy that ayah to the clipboard, see the translation,
        or listen to its recitation.&lt;br/>
        &lt;br/>&lt;b>Malayalam/Tamil/Bengali/Urdu fonts don\'t work!&lt;/b>
        &lt;br/>Unfortunately, Android versions prior to 4.0 do not support these fonts, and there is
        little we can do to help with this.
    </string>
  <string name="search_hint">Search the Quran</string>
  <string name="quranSearchType">Verses of the Quran</string>
  <plurals name="files_downloaded">
    <item quantity="one">1 sura downloaded</item>
    <item quantity="other">%1$d suras downloaded</item>
  </plurals>
  <plurals name="search_results">
    <item quantity="one">One result for \"%1$s\": </item>
    <item quantity="other">%2$d results for \"%1$s\": </item>
  </plurals>
  <string name="storage_permission_rationale">Quran wants your permission to store its data on
        external storage. Quran will work without this permission, but if you clear data or
        uninstall the app, all downloaded pages, audio, and data will be removed. Grant
        Quran permission?</string>
  <string name="storage_permission_please_restart">Please restart the app for this to take effect.</string>
  <string name="found_in_sura">Found in Sura %1$s, Ayah %2$d</string>
  <string name="no_results">No results found for \"%s\"</string>
  <string name="no_arabic_search_available">You have not downloaded the Arabic search pack. Please download it and try your search again.</string>
  <string name="get_arabic_search_db">Get Arabic Search Database</string>
  <string name="prefs_volume_key_navigation_title">Volume key navigation</string>
  <string name="prefs_volume_key_navigation_summary">Navigate between pages using volume keys</string>
  <string name="prefs_category_reading">Reading Preferences</string>
  <string name="prefs_category_translation">Translation Preferences</string>
  <string name="prefs_category_display_settings">Display Settings</string>
  <string name="prefs_use_arabic_title">Arabic mode</string>
  <string name="prefs_use_arabic_summary_on">Use Arabic for application interface</string>
  <string name="prefs_new_background_title">New background</string>
  <string name="prefs_lock_orientation_title">Lock screen orientation</string>
  <string name="prefs_lock_orientation_summary_on">Use fixed orientation mode</string>
  <string name="prefs_lock_orientation_summary_off">Adaptive to current orientation mode</string>
  <string name="prefs_landscape_orientation_title">Landscape orientation</string>
  <string name="prefs_landscape_orientation_summary_on">Always use landscape mode</string>
  <string name="prefs_landscape_orientation_summary_off">Always use portrait mode</string>
  <string name="prefs_night_mode_title">Night mode</string>
  <string name="prefs_night_mode_summary">Use dark background and light fonts</string>
  <string name="prefs_night_mode_text_brightness_title">Text brightness</string>
  <string name="prefs_night_mode_text_brightness_summary">Brightness of the text when night mode is active</string>
  <string name="prefs_overlay_page_info_title">Show page info</string>
  <string name="prefs_overlay_page_info_summary">Overlay page number, sura name, and juz\' number while reading</string>
  <string name="prefs_display_marker_title">Display marker popups</string>
  <string name="prefs_display_marker_summary">Display popup on reaching juz\', hizb, etc.</string>
  <string name="prefs_highlight_bookmarks_title">Highlight bookmarks</string>
  <string name="prefs_highlight_bookmarks_summary">Highlight bookmarked ayahs while reading</string>
  <string name="need_translation">You don\'t have any translations/tafaseer downloaded yet.</string>
  <string name="get_translations">Get Translations</string>
  <string name="previous">Previous</string>
  <string name="next">Next</string>
</resources>