<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <com.techhades.quranapp.widgets.QuranSpinner
        android:id="@+id/translator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/translation_left_right_margin"
        android:layout_marginRight="@dimen/translation_left_right_margin"
        android:layout_marginTop="@dimen/translation_top_bottom_margin"
        android:textColor="@color/accent_color"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <com.techhades.quranapp.widgets.InlineTranslationView
        android:id="@+id/translation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
  </LinearLayout>

  <com.techhades.quranapp.widgets.LeftToRightLinearLayout
      android:id="@+id/controls"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      >
    <ImageButton
        android:id="@+id/next_ayah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_translation_left"
        />
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />
    <ImageButton
        android:id="@+id/previous_ayah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/previous"
        android:src="@drawable/ic_translation_right"
        />
  </com.techhades.quranapp.widgets.LeftToRightLinearLayout>

  <LinearLayout
      android:id="@+id/empty_state"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="8dp"
      android:visibility="gone"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/need_translation"
        />
    <Button
        android:id="@+id/get_translations_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_translations"
        />
  </LinearLayout>

  <ProgressBar
      android:id="@+id/progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      />
</FrameLayout>
